# openspeleo_core

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  benchmark_suite.py  demo.py  demo.xml  load_benchmark.py  main.py  mm.py  openspeleo_core.pyi  pyproject.toml  xml_dict.pyi
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: CI.yml  workflow.yml
python/openspeleo_core/: mapping.py
python/openspeleo_core/_lib/: ariane.pyi  mapping.pyi
python/openspeleo_core/ariane_core/: __init__.py
src/: ariane.rs  lib.rs  mapping.rs  utils.rs
src/ariane/: deserialize.rs  loader.rs  serialize.rs
src_cython/: DEPRECATED  _cython_lib.pyx  setup_cython.py
src_python/openspeleo_core/: __init__.py  __init__.pyi  mapping.py
src_python/openspeleo_core/_cython_lib/: __init__.pyi
src_python/openspeleo_core/_rust_lib/: __init__.pyi  ariane.pyi  compass.pyi  mapping.pyi
src_python/openspeleo_core/_rust_lib/ariane/: __init__.pyi
src_python/openspeleo_core/_rust_lib/mapping/: __init__.pyi
src_python/openspeleo_core/compass_core/: __init__.py  models.py
src_rust/: lib.rs  mapping.rs
src_rust/ariane/: deserialize.rs  loader.rs  serialize.rs
src_rust/compass/: mod.rs  xls2dat.rs
tests/: test_apply_key_mapping.py  test_ariane.py  test_lib.rs  test_xml_to_dict.py  test_xml_utils.py
tests/ariane/: test_ariane.py
tests/artifacts/: Data.xml  demo.tml
tests/compass/: test_models.py
