[package]
name = "openspeleo_core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
maturin = "1.8.2"

[dependencies]
serde = { version = "1.0.218" }
serde_json = "1.0.140"
quick-xml = "0.37.2"
pyo3 = { version = "0.23.5", features = ["extension-module"] }
zip = "2.2.3"
# Generate *.pyi stubs files
pyo3-stub-gen = "0.7.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false
