[package]
name = "openspeleo_core"
edition = "2021"
version = "0.0.4"

[features]
default = ["pyo3/extension-module"]
generate-stubs = []

[build-dependencies]
maturin = "1.10.2"

[dependencies]
ahash = "0.8.12"
# Upgrading to 0.38 creates object mismatch errors - Inside `deserialize.rs`
quick-xml = { version = "0.37.5", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.148"
pythonize = "0.26.0"
pyo3 = { version = "0.26.0", features = ["extension-module", "serde"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
# =================== Generate *.pyi stubs files =================== #
pyo3-stub-gen = "0.18.0"

[dev-dependencies]
criterion = "0.8"

# Windows-only addition
[target.'cfg(windows)'.dependencies.pyo3]
version = "0.26.0"
features = ["extension-module", "generate-import-lib"]

[lib]
path = "src_rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src_rust/bin/stub_gen.rs"
doc = false

[profile.release]
opt-level = 3            # Maximum optimization
lto = "fat"              # Full link-time optimization (slower build, faster runtime)
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip debug symbols
panic = "abort"          # Smaller binary, no unwinding
overflow-checks = false  # Disable overflow checks in release
debug = false            # No debug info
debug-assertions = false # Disable debug assertions

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
