[build-system]
requires = ["maturin>=1.8,<1.9"]
build-backend = "maturin"

[project]
name = "xml_dict"
version = "0.1.0"
description = "A Rust library to convert XML to Python dict and back"
authors = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "xml_dict"
