[build-system]
requires = ["maturin>=1.8,<1.9"]
build-backend = "maturin"

[project]
name = "xml_dict"
version = "0.1.0"
description = "A Rust library to convert XML to Python dict and back"
authors = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = [
    "check-manifest",
    # Pre Commit Hooks
    "pre-commit>=3.6.0,<4.2",
    # Linting
    "ruff>=0.3,<0.10",
]
test = [
    "deepdiff>=7.0,<9.0",
    "hypothesis>=6.127,<6.128",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "pytest-dotenv>=0.5.0,<1.0.0",
    "pytest-env>=1.1.3,<2.0.0",
    "pytest-runner>=6.0.0,<7.0.0",
    "pytest-ordering>=0.6,<1.0.0",
    "parameterized>=0.9.0,<0.10",
    "xmltodict>=0.13,<0.15",
]

[tool.maturin]
module-name = "xml_dict"
